many bugs have been squashed

--- a/react-app/src/components/Categories/Categories.css
+++ b/react-app/src/components/Categories/Categories.css
@@ -1,13 +1,18 @@
 .categoryContainer{
     /* width: 400px; */
     /* height: 40px; */
-    background-color: grey;
+    background-color: rgb(66, 66, 66);
     /* border: 1px solid green; */
     flex-wrap:wrap;
+    border-radius: 10px;
+    margin: 0 7px;
+    padding: 5px;
+    box-shadow: 0 0 4px black inset;
 
 }
 .categoryName{
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     color: white;
+    margin-left: 7px;
 }
